Исправление ошибок компиляции и тестирования